--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "bootstrap-icons": "^1.13.1",
     "date-fns": "^4.1.0",
+    "jose": "^6.1.0",
     "lucide-react": "^0.525.0",
     "next": "^15.2.3",
     "react": "^19.2.0",
